--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -16,16 +16,16 @@ jobs:
         include:
         - name: linux
           os: ubuntu-latest
-          artifact_name: target/release/<name>
-          asset_name: <name>-linux
+          artifact_name: target/release/clique-collector
+          asset_name: clique-collector-linux
         - name: windows
           os: windows-latest
-          artifact_name: target/release/<name>.exe
-          asset_name: <name>-windows
+          artifact_name: target/release/clique-collector.exe
+          asset_name: clique-collector-windows
         - name: macos
           os: macos-latest
-          artifact_name: target/release/<name>
-          asset_name: <name>-macos
+          artifact_name: target/release/clique-collector
+          asset_name: clique-collector-macos
 
     steps:
     - uses: actions/checkout@v1
