--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -2,12 +2,12 @@ name: Build and Publish Binaries
 
 on:
   push:
-    branches:
-    - main
+    tags:
+    - 'v*'
 
 jobs:
-  publish:
-    name: Publish for ${{ matrix.os }}
+  build:
+    name: Build for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -28,9 +28,11 @@ jobs:
           asset_name: clique-collector-macos
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout project
+      uses: actions/checkout@v1
 
-    - uses: actions-rs/toolchain@v1
+    - name: Set up rust
+      uses: actions-rs/toolchain@v1
       with:
         profile: minimal
         toolchain: stable
@@ -38,8 +40,58 @@ jobs:
     - name: Build
       run: cargo build --release --locked
 
-    - name: Upload binaries to release
+    - name: Upload binaries as artifacts
       uses: actions/upload-artifact@v2
       with:
         name: ${{ matrix.asset_name }}
         path: ${{ matrix.artifact_name }}
+
+  publish:
+    name: Publish artifacts as release
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Download artifacts
+      uses: actions/download-artifact@v2
+      with:
+        path: ./artifacts
+
+    - name: Create release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+
+    - name: Upload Linux artifacts to release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./artifacts/clique-collector-linux/clique-collector
+        asset_name: clique-collector-linux
+        asset_content_type: application/x-elf
+
+    - name: Upload MacOS artifacts to release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./artifacts/clique-collector-macos/clique-collector
+        asset_name: clique-collector-macos
+        asset_content_type: application/x-elf
+
+    - name: Upload Windows artifacts to release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./artifacts/clique-collector-windows/clique-collector.exe
+        asset_name: clique-collector-windows.exe
+        asset_content_type: application/x-msdownload
