--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -56,6 +56,8 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         path: ./artifacts
+
+    - name: Make POSIX artifacts executable
       run: |
         chmod +x ./artifacts/clique-collector-linux/clique-collector
         chmod +x ./artifacts/clique-collector-macos/clique-collector
